fixed the gallery on ie

--- a/src/public/css/default.css
+++ b/src/public/css/default.css
@@ -1,13 +1,15 @@
-
+@media screen and (min-width:480px)
+{
     *
     {
             margin: 0;
             padding: 0;
     }
 
-
+}
     #main
     {
+             background: black;
              background-image: -webkit-gradient(
               linear,
               left bottom,
